--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@snap/camera-kit-react-native": "^0.6.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-reanimated": "^3.15.5",
