--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HairSegmentApp",
+  "name": "poc",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,15 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@snap/camera-kit-react-native": "^0.6.0",
     "react": "18.3.1",
-    "react-native": "0.75.4",
-    "react-native-fs": "^2.20.0",
-    "react-native-reanimated": "^3.15.5",
-    "react-native-share": "^12.0.11",
-    "react-native-vision-camera": "^4.5.3",
-    "react-native-webview": "^13.12.3",
-    "socket.io-client": "^4.8.0"
+    "react-native": "0.75.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
